feat: login working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.web.cors.allowed-origins=http://localhost:3000,http://127.0.0.1:3000
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
+
+# JWT Secret (loaded from environment variable or fallback)
+jwt.secret=${JWT_SECRET:Qw8!zP3@rT7#vL2$kN9^bS6&xM1*eJ4%hU0+fC5=G8?dA7~pR2}
